Fix height for message bubble, added delete message function to more messages types, fix text overlap when all cols are hidden

--- a/css/chata-styles.css
+++ b/css/chata-styles.css
@@ -273,7 +273,8 @@ body{
 
 .autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble {
     position: relative;
-    margin: 10px 0px 10px 10px;
+    /* margin: 10px 0px 10px 10px; */
+    margin: 10px -10px 10px 10px;    
     padding: 13px;
     border-radius: 10px;
     max-width: calc(100% - 20px);
@@ -619,7 +620,7 @@ body{
 }
 
 .autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble.full-width {
-    max-width: calc(100% - 30px);
+    /* max-width: calc(100% - 30px); */
     width: 100%;
 }
 
@@ -1787,7 +1788,7 @@ text.autoql-vanilla-x-axis-label, text.autoql-vanilla-y-axis-label {
 }
 
 .autoql-vanilla-no-columns-error-message {
-    position: absolute;
+    /* position: absolute; */
     height: 100%;
     width: 100%;
     display: flex;
